--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
         <div class="col-md-6">
           <h4>About HQ Practice</h4>
           <p class="lead">
-            HQ Practice is brought to you by
-            <a target="_blank" href="http://cobrella.io">Cobrella</a>, a Denver based web and mobile app development company.
+            HQ Practice is built by
+            <a target="_blank" href="https://joeyscarim.com">Joey Scarim</a>, a Denver based web and mobile app developer.
             <!-- </p>
           <p class="lead"> -->
             <br>
@@ -193,7 +193,7 @@
     var currentQuestion = 0;
     var correctAnswer = 0;
     var counter;
-    
+
 
     var countdown = $("#countdown").countdown360({
       radius: 20,
